fable/test/valid/do_enddo.f
      program prog
      do i=1,2
        write(6,*) i
      enddo
      do j=3,5,2
        write(6,*) j
      enddo
      end
