fable/test/syntax_error/bad_implied_do_6.f
      program prog
      write(6, *) (i,i+j=1,2)
      end
